<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">n00Bart</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="buy_use">How do I buy/use	a ticket?</string>
    <string name="where_go">Where can I go?</string>
    <string name="how_much">How much will my trip cost?</string>
    <string name="next_leave">When will the next train leave?</string>
    <string name="action_settings">Settings</string>
    <string name="orig">Origin</string>
    <string name="dest">Destination</string>
    <string name="app_fare">Fare Calculation</string>
    <string name="app_zoom">Zoomable Map</string>
    <string name="app_near">Find the Nearest Station and Departure Times</string>
    <string name="app_buy">How To Buy and Use a Ticket</string>
    <string name="i_want">I want to go to there...</string>
    <string name="and_cost">And it will cost...</string>
	<string name="cost">$.$$</string>
	<string name="from">From</string>
	<string name="to">To</string>
	<string name="calculate_cost">Calculate the cost</string>	
	<string name="buy1">1. Find the ticketing kiosk machines. They look like this:</string>	
	<string name="buy2">2. See how much your trip will cost on the BART Fares table.</string>
	<string name="buy3">3. Choose your payment method. </string>
	<string name="buyA"> Push \'A\' to pay with cash.</string>
	<string name="buyB">Push \'B\' to pay with Credit/Debit.</string>
	<string name="buyC"> Push \'C\' to add value to an existing ticket.</string>
	<string name="buyD">Push \'D\' to add value to your Clipper Card.</string>
	<string name="buy4">4. Select how much money you would like to add to your ticket/card.</string>				
	<string name="buy5">5. Time to Pay! Insert Cash..</string>
	<string name="buy5A">..or your Credit Card.</string>
	<string name="buy6">6. Take your ticket, change, and receipt. </string>	
	<string name="buy7">7. Look for the platform entrances with green arrows and insert your ticket into the slot.</string>	
	<string name="buy7A">Remember to take it out after inserting it and save it because you will need it to exit your destination station.</string>	
	<string name="happyTravels">Happy Travels!</string>
	<string name="welcome">for those who are new to Bart</string>
	<string name="n00Bart">n00Bart:</string>
	<string name="c12">col12</string>
	<string name="fareInstruc">Please type in your desired stations and select from the drop-down menu.</string>
	<string name="calc_again">Calculate another route</string>
	<string name="lat">Current Latitude</string>
	<string name="lon">Current Longitude</string>
	<string name="get_nearest">Find the nearest BART station and train departure times</string>	
	<string name="nearStat">Click button below to find out</string>	
	<string name="distance">Distance</string>
	<string name="Destination">Destination</string>
	<string name="eta">eta</string>
	<string name="connection_error">Connection Error</string>		
	<string name="xml_error">XML Error</string>		
	<string name="theClosest">The closest station to your current location is...</string>
	<string name="train_to">Train to</string>
	<string name="leaving_in">Leaving in</string>
	<string name="one">One-Way</string>
	<string name="round">Round-Trip</string>
	
    <string-array name="station_array">
        <item>12th St. Oakland City Center</item>
        <item>16th St. Mission (SF)</item>
        <item>19th St. Oakland</item>
        <item>24th St. Mission (SF)</item>
        <item>Ashby (Berkeley)</item>
        <item>Balboa Park (SF)</item>
        <item>Bay Fair (San Leandro)</item>
        <item>Castro Valley</item>
        <item>Civic Center (SF)</item>
        <item>Coliseum/Oakland Airport</item>
        <item>Colma</item>
        <item>Concord</item>
        <item>Daly City</item>
        <item>Downtown Berkeley</item>
        <item>Dublin/Pleasanton</item>
        <item>El Cerrito del Norte</item>
        <item>El Cerrito Plaza</item>
        <item>Embarcadero (SF)</item>
        <item>Fremont</item>
        <item>Fruitvale (Oakland)</item>
        <item>Glen</item>
        <item>Hayward</item>
        <item>Lafayette</item>
        <item>Lake Merritt (Oakland)</item>
        <item>MacArthur (Oakland)</item>
        <item>Millbrae</item>
        <item>Montgomery St. (SF)</item>
        <item>North Berkeley</item>
        <item>North Concord/Martinez</item>
        <item>Orinda</item>
        <item>Pittsburg/Bay Point</item>
        <item>Pleasant Hill</item>
        <item>Powell St. (SF)</item>
        <item>Richmond</item>
        <item>Rockridge (Oakland)</item>
        <item>San Bruno</item>
        <item>San Francisco Int\'l Airport</item>
        <item>San Leandro</item>
        <item>South Hayward</item>
        <item>South San Francisco</item>
        <item>Union City</item>
        <item>Walnut Creek</item>
        <item>West Oakland</item>
    </string-array>

    <string name="title_activity_blah">Blah</string>

</resources>