
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dip"
        android:layout_gravity="center_horizontal"
        android:text="@string/buy_use" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dip"
        android:layout_gravity="center_horizontal"
        android:text="@string/where_go" />
    
    <Button
        android:id="@+id/fare_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:padding="10dip"
        android:text="@string/how_much" />

    <Button
        android:id="@+id/next_leave_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:padding="10dip"
        android:text="@string/next_leave" />
    

</LinearLayout>