<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/locationButton"
        android:layout_width="431dp"
        android:layout_height="105dp"
        android:layout_x="90dp"
        android:layout_y="702dp"
        android:background="@color/DodgerBlue"
        android:fontFamily="sans-serif-condensed"
        android:onClick="checkLocation"
        android:text="@string/get_nearest"
        android:textColor="@color/White"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="4dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/theClosest"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/DodgerBlue"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/e2"
        android:layout_width="251dp"
        android:layout_height="45dp"
        android:layout_x="330dp"
        android:layout_y="363dp"
        android:text="@string/eta"
        android:textColor="@color/White"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/e3"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_x="330dp"
        android:layout_y="443dp"
        android:text="@string/eta"
        android:textColor="@color/White"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/e4"
        android:layout_width="252dp"
        android:layout_height="45dp"
        android:layout_x="330dp"
        android:layout_y="523dp"
        android:text="@string/eta"
        android:textColor="@color/White"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/e5"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_x="330dp"
        android:layout_y="603dp"
        android:text="@string/eta"
        android:textColor="@color/White"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/e1"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:layout_x="330dp"
        android:layout_y="283dp"
        android:text="@string/eta"
        android:textColor="@color/White"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/nearestStation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="147dp"
        android:gravity="center"
        android:text="@string/nearStat"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/Gray"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/d1"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:layout_x="30dp"
        android:layout_y="283dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Destination"
        android:textColor="@color/White"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/d4"
        android:layout_width="339dp"
        android:layout_height="45dp"
        android:layout_x="30dp"
        android:layout_y="523dp"
        android:text="@string/Destination"
        android:textColor="@color/White"
		android:fontFamily="sans-serif-condensed"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/d3"
        android:layout_width="286dp"
        android:layout_height="45dp"
        android:layout_x="30dp"
        android:layout_y="443dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Destination"
        android:textColor="@color/White"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/d2"
        android:layout_width="332dp"
        android:layout_height="45dp"
        android:layout_x="30dp"
        android:layout_y="363dp"
        android:text="@string/Destination"
        android:textColor="@color/White"
        android:fontFamily="sans-serif-condensed"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/d5"
        android:layout_width="335dp"
        android:layout_height="45dp"
        android:layout_x="30dp"
        android:layout_y="603dp"
        android:text="@string/Destination"
        android:textColor="@color/White"
        android:fontFamily="sans-serif-condensed"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="220dp"
        android:textSize="36sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/DodgerBlue"
        android:text="@string/train_to" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="330dp"
        android:layout_y="220dp"
        android:textSize="36sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/DodgerBlue"
        android:text="@string/leaving_in" />

    <TextView
        android:id="@+id/curLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="404dp"
        android:layout_y="670dp"
        android:textColor="@color/White"
        android:text="@string/lon" />

    <TextView
        android:id="@+id/curLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="102dp"
        android:layout_y="673dp"
        android:textColor="@color/White"
        android:text="@string/lat" />

</AbsoluteLayout>